--- a/CSS/index.html
+++ b/CSS/index.html
@@ -22,9 +22,10 @@
             <div id="info" class="content hidden">
                 <ol>
                     <li>Nombre: Carolina </li>
-                    <li>Apellido: Farrera</li>
+                    <li>Apellido: Farrera Ramírez</li>
                     <li>Email: caro.fara98@gmail.com</li>
                     <li>Teléfono: +52 1 55 2737 7556</li>
+                    <li>Fecha de nacimiento: 18 de diciembre de 1998</li>
                 </ol>
             </div>
         </div>
