--- a/CSS/index.html
+++ b/CSS/index.html
@@ -52,7 +52,7 @@
 
     <!-- Pie de página -->
     <footer class="footer">
-        <p>© 2024 Jafeth Oswaldo Guerrero Serrano | Todos los derechos reservados.</p>
+        <p>© 2024 Carolina Farrera Ramírez  | Todos los derechos reservados.</p>
        
     <!-- JavaScript para botones dinámicos -->
     <script>
